# Gamemaker-sprite-crosshair-remover

./: .gitignore  CMakeLists.txt  setup.bat
CrosshairDestroyer/: CMakeLists.txt
CrosshairDestroyer/src/: SpriteFile.h  main.cpp
OpenCV3_Template/: SpriteFile.cpp
OpenCV3_Template/Debug/: vc141.idb
OpenCV3_Template/Debug/OpenCV3_Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCV3_Template.lastbuildstate
OpenCV3_Template/x64/Debug/: vc141.idb
OpenCV3_Template/x64/Debug/JitsuSqu.DC3C9169.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCV3_Template/x64/Debug/OpenCV3_Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCV3_Template.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCV3_Template/x64/Release/JitsuSqu.DC3C9169.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  JitsuSquad CrossHairRemover.lastbuildstate  JitsuSquad CrossHairRemover.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCV3_Template/x64/Release/OpenCV3_Template.tlog/: CL.command.1.tlog  CL.write.1.tlog  OpenCV3_Template.lastbuildstate  OpenCV3_Template.write.1u.tlog  link.command.1.tlog  link.write.1.tlog
x64/Debug/: JitsuSquad CrossHairRemover.ilk
x64/Release/: JitsuSquad CrossHairRemover.iobj  JitsuSquad CrossHairRemover.ipdb
